# light_sequence_parser

./: CMakeLists.txt
include/sequence/: Tools.hpp
include/sequence/details/: ParserUtils.hpp  Utils.hpp
src/: MurmurHash3.h  Parser.cpp  ParserUtils.cpp  Tools.cpp  Utils.cpp
test/: parser_test.cpp  parser_utils_test.cpp
